# schematic

./: .gitignore  README.md  database.py  handlers.py  main.py  models.py  pyproject.toml  settings.py  tools.py
task/: complex_data_final.json  complex_data_with_noise.xml  final_complex_data_with_noise_with_errors.xml
